<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:background="@drawable/bg_img">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E6393939" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/welcome_setting_area"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_mood"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/darkMoodRadioGroupId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/darkMoodOffId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/off" />

            <RadioButton
                android:id="@+id/darkMoodOnId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/on" />

            <RadioButton
                android:id="@+id/darkMoodSystemId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/system" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/system_des"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:padding="5dp"
        android:textColor="@color/white"
        android:justificationMode="inter_word"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout6"
        app:layout_constraintStart_toStartOf="@+id/linearLayout6"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/darkMoodNextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="60dp"
        android:text="@string/next"
        android:backgroundTint="@color/main_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlCompat,UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>